demo/02-a-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-deployment
  name: test-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-deployment
  template:
    metadata:
      labels:
        app: test-deployment
    spec:
      containers:
      - image: hashicorp/http-echo
        name: http-echo
        args:
          - "-text=helloooooo"
        resources: {}
status: {}
