demo/02-a-deployment/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: test-service
  namespace: default
spec:
  selector:
    app: test-deployment
  ports:
    - port: 5678 # Default port for image
      targetPort: 5678
      protocol: TCP
