demo/02-a-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: helloworld.s8q7d.k8s.gorilla.eu-central-1.aws.gigantic.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: test-service 
              port:
                number: 5678
